Agrega link correcto a github pages en readme corrige el overflow del profile y la superposicion del profile title en firefox

--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -106,7 +106,7 @@
 }
 
 .popup_opened {
-  display: flex;
+  /* display: flex; */
   opacity: 1;
   visibility: visible;
 }
