--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,7 +23,7 @@
 
 .profile__name {
   margin: 0;
-  width: 378px;
+  width: 414px;
   font-size: 42px;
   font-family: "Inter Medium", Arial, sans-serif;
   line-height: 56px;
@@ -35,6 +35,9 @@
   width: 372px;
   line-height: 18px;
   font-size: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -48,6 +51,9 @@
   align-self: end;
   cursor: pointer;
   border: 1px solid #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button:hover {
@@ -97,7 +103,7 @@
   }
 
   .profile__name {
-    width: 201px;
+    width: 250px;
     font-size: 22px;
     line-height: 38px;
   }
